--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "3.1.1",
     "path": "0.12.7",
     "prettier": "3.2.5",
+    "retype": "0.2.0",
     "uuid": "9.0.1"
   },
   "devDependencies": {
