--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "16.4.5",
     "fs": "0.0.1-security",
     "glob": "10.4.1",
+    "i18next": "23.11.5",
+    "i18next-fs-backend": "2.3.1",
     "mongoose": "8.4.0",
     "nodemon": "3.1.1",
     "path": "0.12.7",
